# contract-provider

./: .prospector.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: contract-verify-on-contract-published.yml  semantic-release-main-branch.yml
docs/: explanation.md  how-to-guides.md  tutorials.md
src/contract_provider/: __main__.py  project.py
src/contract_provider/helloworld/: __init__.py  helloworld.py
tests/helloworld/: test_helloworld.py
tests/provider/: test_verify_consumer_contract.py
